# SteamOS-wallpaper-engine-kde-plugin

./: README.md  install.sh  remove.sh
source/: CLAUDE.md  README.md
source/plugin/contents/config/: main.xml
source/src/: CMakeLists.txt  FileHelper.cpp  FileHelper.hpp  MouseGrabber.cpp  PluginInfo.hpp  plugin.cpp
source/src/backend_mpv/: MpvBackend.cpp  qthelper.hpp
source/src/backend_scene/: .gitmodules  CMakeLists.txt  README.md
source/src/backend_scene/qml_helper/: SceneBackend.cpp  SceneBackend.hpp
source/src/backend_scene/src/: CMakeLists.txt  Image.hpp  SceneWallpaper.cpp  SceneWallpaper.hpp  WPJson.cpp  WPMdlParser.cpp  WPPuppet.cpp  WPPuppet.hpp  WPSceneParser.cpp  WPSceneParser.hpp  WPShaderParser.cpp  WPShaderValueUpdater.hpp  WPTexImageParser.cpp  WPUserProperties.hpp
source/src/backend_scene/src/Audio/: miniaudio-wrapper.hpp
source/src/backend_scene/src/Core/: ArrayHelper.hpp  Literals.hpp
source/src/backend_scene/src/Interface/: ISceneParser.h
source/src/backend_scene/src/Particle/: ParticleSystem.cpp
source/src/backend_scene/src/Particle/include/Particle/: ParticleSystem.h
source/src/backend_scene/src/Vulkan/: CMakeLists.txt  Shader.cpp  Swapchain.cpp  vulkan_wrapper.cpp
source/src/backend_scene/src/Vulkan/include/vvk/: vulkan_wrapper.hpp
source/src/backend_scene/src/VulkanRender/: CustomShaderPass.cpp  CustomShaderPass.hpp  VulkanPass.hpp  VulkanRender.cpp
source/src/backend_scene/src/wpscene/: WPImageObject.cpp  WPImageObject.h
source/src/backend_scene/standalone_view/: pkg_rc.py  qmlviewer.cpp
(+20 files in other folders)
